--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: Sravan Varala
+logo: /assets/img/sk.png
+description: Optimist with strong interest in exploring solutions and adding skills.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
