--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sravan Varala
-logo: /assets/img/Srarvan_Linkedin.JPG
+logo: /assets/img/logo.png
 description: Optimist with strong interest in exploring solutions and adding skills.
 
 description:
